# rotalubat

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
src/: lib.rs
tests/: binary.rs  clamp_mode.rs  error_messages.rs  explicit_wrap.rs  months.rs  single.rs  single_clamp.rs  stepdance.rs  with_attributes.rs
tests/error_messages/: invalid_mode.rs  invalid_mode.stderr  no_variants.rs  no_variants.stderr  struct_not_enum.rs  struct_not_enum.stderr  union_not_enum.rs  union_not_enum.stderr  unknown_attribute.rs  unknown_attribute.stderr  variant_with_fields.rs  variant_with_fields.stderr
