[package]
name = "rotalubat"
version = "1.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A derive macro for cycling through enum variants."
repository = "https://github.com/barafael/rotalubat"

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"

[dev-dependencies]
trybuild = "1"
